--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://eng-dallavecchia.github.io/resume",
+  "homepage": "http://eng-dallavecchia.github.io/",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
